Fix spacing and add header border

--- a/src/css/callList.css
+++ b/src/css/callList.css
@@ -36,7 +36,6 @@
   background-color: white;
   padding-bottom: 5px;
   padding-top: 5px;
-  border-bottom: 1px solid #ddd;
 }
 
 .archive-all-button {
@@ -45,7 +44,7 @@
   align-items: center;
   
   margin-top: 16px;
-  margin-right: 17px;
+  margin-right: 32px;
   
   border: .5px;
   border-style: solid;
