--- a/src/css/header.css
+++ b/src/css/header.css
@@ -5,6 +5,7 @@
   padding-left: 2em;
   padding-right: -2em;
   z-index: 99999999;
+  border-bottom: solid 1px grey;
 }
 
 header {
